  * softwarecenter/view/availablepane.py:
    - capitalize 'install n items' button label for mpt (LP: #605052)
  * softwarecenter/view/catview_gtk.py:
    - speed up carousel transition (thanks nuthinking) (LP: #604627)
  * softwarecenter/view/catview.py:
    - allow 'OR' tag inside an 'AND' tag

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 16 Jul 2010 09:14:22 +0200

software-center (2.1.5) maverick; urgency=low

  [ Michael Vogt ]
  * softwarecenter/backend/aptd.py:
    - fix in channel adding code
  * merged lp:~mvo/software-center/lazr to support gobject
    based wrapper around lazr.restfulclient apps
  * merged lp:~mmcg069/software-center/pathbar-tweaks,
    many thanks
  * merged  lp:~mvo/software-center/appdetails-in-db that
    improve the AppDetails abstraction 
  * merged lp:~mvo/software-center/plugin-support (important
    for the oneconf integration)
  * merged lp:~osomon/software-center/close_in_progress
    that fixes LP:#431907, thanks to Olivier Tilloy 
  * remove specal cases for partner now that soyuz 
    LP: #552560 is fixed (LP: #604693)
  * software-center:
    - fixes in the logging code (thanks to Geliy Sokolov)
  * merged lp:~and471/software-center/dialog-work that improves
    the dialogs (many thanks!)
  
  [ Gary Lasker ]
  * data/icons/scalable/apps/category-show-all.svg,
    data/icons_unbranded/scalable/apps/category-show-all.svg,
    softwarecenter/view/catview_gtk.py:
    - add custom icon for single-pane dept view "All" button;
      icon created by Dani Planas Armangue, many thanks!
      (LP: #599644)
  * softwarecenter/view/pkgview.py:
    - replace svg icon with png version because the svg version
      has been removed from gnome-icon-theme (LP: #601987)
  * po/POTFILES.in:
    - update to latest set of modules
  * merge lp:~mmcg069/software-center/appdetailsview-gtk, adds
    Matthew McGowan's new gtk-based appdetailsview, many thanks!
    Thanks also to kiwinote and mvo for refactoring for new