@@ -19,7 +19,9 @@
 import gobject
 import locale
 import logging
+import os
 import re
+import string
 import xapian
 
 from softwarecenter import Application
@@ -51,6 +53,18 @@ class StoreDatabase(gobject.GObject):
         gobject.GObject.__init__(self)
         self._db_pathname = pathname
         self._aptcache = cache
+        # the xapian values as read from /var/lib/apt-xapian-index/values
+        self._axi_values = {}
+
+    def _parse_axi_values_file(self, filename="/var/lib/apt-xapian-index/values"):
+        if not os.path.exists(filename):
+            return
+        for raw_line in open(filename):
+            line = string.split(raw_line, "#", 1)[0]
+            if line.strip() == "":
+                continue
+            (key, value) = line.split()
+            self._axi_values[key] = value
 
     def open(self, pathname=None, use_axi=True):
         " open the database "
